--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,81 @@
-/* ============= GLOBAL CSS =============== */
+/* 
+******************************************
+DESIGN GUIDELINES
+******************************************
 
-*,
-::after,
-::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+--01 TYPOGRAPHY SYSTEM
 
-html {
-  font-size: 100%;
-} /*16px*/
+- Font Size System(px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
-:root {
-  /* colors */
-  --primary-100: hsl(244, 100%, 94%);
-  --primary-200: hsl(243, 100%, 87%);
-  --primary-300: hsl(243, 100%, 81%);
-  --primary-400: hsl(243, 100%, 75%);
-  --primary-500: hsl(243, 100%, 68%);
-  --primary-600: hsl(243, 56%, 55%);
-  --primary-700: hsl(243, 47%, 41%);
-  --primary-800: hsl(243, 47%, 27%);
-  --primary-900: hsl(244, 48%, 14%);
+- Font Weight:
+Default: 400
+Medium: 500
+Semi-Bold: 600
+Bold: 700
 
-  /* grey */
-  --grey-50: hsl(210, 40%, 98%);
-  --grey-100: hsl(210, 40%, 96%);
-  --grey-200: hsl(214, 32%, 91%);
-  --grey-300: hsl(213, 27%, 84%);
-  --grey-400: hsl(215, 20%, 65%);
-  --grey-500: hsl(215, 16%, 47%);
-  --grey-600: hsl(215, 19%, 35%);
-  --grey-700: hsl(215, 25%, 27%);
-  --grey-800: hsl(217, 33%, 17%);
-  --grey-900: hsl(222, 47%, 11%);
-  /* rest of the colors */
+- Line Heights:
+Default: 1
+Small: 1.05
+Medium: 1.2
+<p> Default: 1.6
+
+- Spacing System (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+
+--- 02 COLORS
+
+Primary: #40407a, 
+Tints:  #535387; #a0a0bd; #ececf2; 
+Shades: #3a3a6e; #20203d; #06060c; 
+Accents: #33d9b2
+Greys: #bcb8ad; #696660; #151413; 
+
+ rest of the colors 
   --black: #222;
   --white: #fff;
   --red-light: #f8d7da;
   --red-dark: #842029;
   --green-light: #d1e7dd;
   --green-dark: #0f5132;
+
+
+--- 03 IMAGES
+--- 04 ICONS
+
+--- 05 SHADOWS
+
+Default: box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
+--- 06 BORDER RADIOUS
+Default : 9px
+Medium: 1.2rem
+
+--- 07 WHITE SPACE
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+*/
+
+/* ============= VARIABLES =============== */
+
+:root {
+  /* colors */
+  --primary: #40407a;
+
+  --primary-tint-dark: #535387;
+  --primary-tint-medium: #a0a0bd;
+  --primary-tint-light: #ececf2;
+
+  --primary-shade-light: #3a3a6e;
+  --primary-shade-medium: #20203d;
+  --primary-shade-dark: #06060c;
+
+  --accent: #33d9b2;
+
+  --grey-light: #bcb8ad;
+  --grey-medium: #696660;
+  --grey-dark: #151413;
 
   --small-text: 0.875rem;
   --extra-small-text: 0.7em;
@@ -56,20 +90,39 @@ html {
 
   /* box shadow*/
   --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
+/* ============= GLOBAL CSS =============== */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+}
+
+html {
+  /* Percentage of user's default browser font-size setting */
+  font-size: 62.5%;
+  overflow-x: hidden;
+  /* animates smooth scrooling within internal links only using css, can be also done in javascript */
+  /* scroll-behavior: smooth; */
+}
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 400;
+  font-family: "Rubik", sans-serif, system-ui, -apple-system;
   line-height: 1;
+  font-weight: 400;
+  color: #555;
   color: var(--textColor);
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 h1,
@@ -80,7 +133,6 @@ h5 {
   margin: 0;
   font-weight: 400;
   line-height: 1;
-  text-transform: capitalize;
   letter-spacing: var(--letterSpacing);
 }
 
@@ -138,8 +190,6 @@ img {
 /******************************************
 /* LAYOUT
 /*******************************************/
-
-
 
 /******************************************
 /* ADDITIONAL STYLES
